--- a/style.css
+++ b/style.css
@@ -1749,6 +1749,7 @@ p.excerpt-meta .excerpt-author {
   margin: .3rem 1rem .66rem 0;
   width: 50% !important; }
 
+.voa-archive-widget .vaw-list-container,
 .top-tags-widget .top-tags,
 .widget_archive ul,
 .widget_categories ul {
@@ -1756,6 +1757,7 @@ p.excerpt-meta .excerpt-author {
   line-height: 2em;
   margin: .8em; }
 
+.voa-archive-widget .vaw-list,
 .top-tags-widget .tags,
 .widget_archive > ul,
 .widget_categories > ul {
@@ -1768,6 +1770,7 @@ p.excerpt-meta .excerpt-author {
 .widget_categories > ul {
   margin: .8em; }
 
+.voa-archive-widget .vaw-list li,
 .top-tags-widget .tags li,
 .widget_archive > ul > li,
 .widget_categories > ul > li {
@@ -1777,6 +1780,7 @@ p.excerpt-meta .excerpt-author {
   border-width: 1px;
   color: #ccc;
   font-size: 1em;
+  height: 2em;
   margin-bottom: .5em;
   padding: 0; }
 
@@ -1784,6 +1788,7 @@ p.excerpt-meta .excerpt-author {
 .widget_categories > ul > li {
   color: #e6e6e6; }
 
+.voa-archive-widget .vaw-list li .vaw-text,
 .top-tags-widget .tag,
 .widget_archive > ul > li > a,
 .widget_categories > ul > li > a {
@@ -1795,8 +1800,13 @@ p.excerpt-meta .excerpt-author {
   padding: 0 1.5em 0 .66em;
   position: relative;
   text-decoration: none;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  max-width: 60%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
 
+.voa-archive-widget .vaw-list li .vaw-text::after,
 .top-tags-widget .tag::after,
 .widget_archive > ul > li > a::after,
 .widget_categories > ul > li > a::after {
@@ -1810,6 +1820,7 @@ p.excerpt-meta .excerpt-author {
   top: 0;
   transition: all 0.2s; }
 
+.voa-archive-widget .vaw-list li .vaw-text:hover,
 .top-tags-widget .tag:hover,
 .widget_archive > ul > li > a:hover,
 .widget_categories > ul > li > a:hover {
@@ -1818,12 +1829,14 @@ p.excerpt-meta .excerpt-author {
   text-decoration: none;
   transition: all 0.2s; }
 
+.voa-archive-widget .vaw-list li .vaw-text:hover::after,
 .top-tags-widget .tag:hover::after,
 .widget_archive > ul > li > a:hover::after,
 .widget_categories > ul > li > a:hover::after {
   border-left-color: #d41010;
   transition: all 0.2s; }
 
+.voa-archive-widget .vaw-list li .vaw-count,
 .top-tags-widget .tag-count,
 .widget_archive > ul > li > *:not(a),
 .widget_categories > ul > li > *:not(a) {
