Tweaked whitespace under intro/header for articles

--- a/css/style.scss
+++ b/css/style.scss
@@ -216,6 +216,8 @@ article > content p.wp-caption-text {
 	padding: 0 .5rem 1.6rem .5rem;
 }
 
+.single-basic-intro .featured-img > p { padding-bottom: 0; }
+
 .article-body > p > img {
 	margin-left: -4rem;
 	margin-right: -4rem;
@@ -1567,7 +1569,7 @@ p.excerpt-meta .excerpt-author {
 	
 	.site-title { margin: 2rem auto; }
 	
-	.single-basic-intro { padding-top: 2rem; padding-bottom: 2rem; }
+	.single-basic-intro { padding-top: 2rem; padding-bottom: 1rem; }
 	.archive article > content { padding-top: 2rem; }
 	
 	body.archive .single-basic-intro {
