--- a/style.css
+++ b/style.css
@@ -287,6 +287,9 @@ article > content p.wp-caption-text {
   margin: 0;
   padding: 0 .5rem 1.6rem .5rem; }
 
+.single-basic-intro .featured-img > p {
+  padding-bottom: 0; }
+
 .article-body > p > img {
   margin-left: -4rem;
   margin-right: -4rem;
@@ -1975,7 +1978,7 @@ p.no-comments {
 
   .single-basic-intro {
     padding-top: 2rem;
-    padding-bottom: 2rem; }
+    padding-bottom: 1rem; }
 
   .archive article > content {
     padding-top: 2rem; }
