Updated text highlight to use "VOA Red"

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -4,6 +4,7 @@ $voablue:   #1330bf;
 $voared:    #d41010;
 $voagray:   #919191;
 
+$white:     #ffffff;
 $offwhite:  #fcfcfc;
 $dkwhite:   #f6f6f6;
 
@@ -18,7 +19,7 @@ $midgray:   #666;
 $vdkgray:   #333;
 $offblack:  #111;
 
-$highlight: #7fdbff;
+$highlight: $voared;
 
 // social media colors
 $facebook_color:   #3b5998;
