--- a/css/style.scss
+++ b/css/style.scss
@@ -42,8 +42,8 @@ iframe {
 a, a:visited { color: $voablue; text-decoration: underline; }
 a:hover, a:active { color: $voared; text-decoration: underline; }
 
-::-moz-selection { background-color: $highlight; }
-::selection      { background-color: $highlight; }
+::-moz-selection { background-color: $highlight; color: $white; }
+::selection      { background-color: $highlight; color: $white; }
 
 
 
